feat(cors): add CORS support in api-gateway for React frontend (#79)
Add CorsFilter at Order(0) to handle CORS headers and OPTIONS preflight
before SecurityFilter. Also fix null origin support for devops/test-login.html
opened via file:// protocol.

Changes:

CorsFilter.java (new, @Order(0)):
- Runs before SecurityFilter (@Order(1))
- allowedOrigins: http://localhost:5173 (Vite), http://localhost:3000 (CRA),
  "null" (file:// protocol for devops/test-login.html)
- allowedMethods: GET, POST, PUT, DELETE, PATCH, OPTIONS
- allowedHeaders: Authorization, Content-Type, X-Requested-With
- exposedHeaders: Authorization
- allowCredentials: false — JWT stored in localStorage, sent via
  Authorization header, no cookies used
- OPTIONS preflight: returns 200 immediately, does NOT call
  filterChain.doFilter() — SecurityFilter fully bypassed

SecurityFilter.java:
- Add step 0.5: bypass OPTIONS requests — pass through without JWT check
  (CORS headers already set by CorsFilter)

SecurityConfiguration.java:
- Replace allowedOriginPatterns("*") + allowCredentials(true) with exact
  origins matching CorsFilter + allowCredentials=false
- Add "null" origin for file:// protocol

CorsFilterTest.java (new, 5 tests):
- preflight_allowedOrigin_returns200WithCorsHeaders
- preflight_port3000_returns200
- get_allowedOrigin_addsCorsHeadersAndPassesThrough
- request_unknownOrigin_noCorsHeaders
- preflight_nullOrigin_returns200WithCorsHeaders (file:// fix)

api-gateway: 13 tests, 0 failures
Full project: 177 tests, 0 failures, BUILD SUCCESS

Closes #79